--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,18 +1,19 @@
+@use 'colors';
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
-html, body {
+html,body {
   max-width: 100vw;
   height: 100%;
   overflow: hidden;
 }
 
 body {
-  background-color: #ffffff; /* Adjust the background color */
-  color: #fb5607;
+  background-color: colors.$background; /* Adjust the background color */
+  color: colors.$primary;
   display: flex;
   flex-direction: column;
 }
@@ -22,23 +23,21 @@ ul {
 }
 
 a {
-  color: #fb5607;
+  color: colors.$primary;
   text-decoration: none;
   margin: 0 10px;
   font-weight: bold;
   transition: color 0.3s;
   cursor: pointer;
 }
-
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 100%;
 }
-
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
-}/*# sourceMappingURL=globals.css.map */
+}
