--- a/app/components/FlipBook/FlipBook.css
+++ b/app/components/FlipBook/FlipBook.css
@@ -9,8 +9,7 @@
   flex: 1;
   margin: 10px;
 }
-.book .left-page,
-.book .right-page {
+.book__page {
   width: 50%;
   height: 100%;
   background-size: cover;
@@ -19,27 +18,38 @@
   justify-content: center;
   position: absolute;
   backface-visibility: hidden;
-  transition: transform 0.5s ease;
   padding: 10px 5px;
 }
-.book .left-page {
+.book__page__content {
+  padding: 20px;
+  width: 90%;
+  height: 90%;
+  background-color: white;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  transform: rotateY(0deg);
+}
+.book__page--hidden {
+  display: none;
+}
+.book__page__left {
   left: 0;
   transform-origin: right center;
   background-color: blue;
   margin-right: 5px;
+  transform: rotateY(0deg);
 }
-.book .right-page {
+.book__page__left--behind {
+  transform: rotateY(-180deg);
+}
+.book__page__right {
   right: 0;
   transform-origin: left center;
   background-color: red;
   margin-left: 5px;
+  transform: rotateY(0deg);
 }
-.book__page__content {
-  padding: 1rem;
-  background-color: rgba(255, 255, 255, 0.8);
-  border-radius: 5px;
-  max-width: 80%;
-  text-align: center;
+.book__page__right--behind {
+  transform: rotateY(180deg);
 }
 .book button {
   margin-top: 1rem;
