--- a/app/components/FlipBook/FlipBook.scss
+++ b/app/components/FlipBook/FlipBook.scss
@@ -8,63 +8,71 @@
   position: relative;
   flex: 1;
   margin: 10px;
-   & .left-page,
-   .right-page {
-     width: 50%;
-     height: 100%;
-     background-size: cover;
-     background-position: center;
-     display: flex;
-     justify-content: center;
-     position: absolute;
-     backface-visibility: hidden;
-     transition: transform 0.5s ease;
-     padding: 10px 5px;
-   }
-   & .left-page {
-    left: 0;
-    transform-origin: right center;
-    background-color: blue;
-    margin-right: 5px;
+
+  &__page {
+    width: 50%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    backface-visibility: hidden;
+    padding: 10px 5px;
+    &__content {
+      padding: 20px;
+      width: 90%;
+      height: 90%;
+      background-color: white;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      transform: rotateY(0deg);
+    }
+    &--hidden {
+      display: none;
+    }
+    &__left {
+      left: 0;
+      transform-origin: right center;
+      background-color: blue;
+      margin-right: 5px;
+      transform: rotateY(0deg);
+      &--behind{
+        transform: rotateY(-180deg);
+      }
+    }
+    &__right {
+      right: 0;
+      transform-origin: left center;
+      background-color: red;
+      margin-left: 5px;
+      transform: rotateY(0deg);
+      &--behind{
+        transform: rotateY(180deg);
+      }
+    }
+    
   }
-  
-  & .right-page {
-    right: 0;
-    transform-origin: left center;
-    background-color: red;
-    margin-left: 5px;
-  }   
-      &__page__content {
-        padding: 1rem;
-        background-color: rgba(255, 255, 255, 0.8);
-        border-radius: 5px;
-        max-width: 80%;
-        text-align: center;
-      }
-      button {
-        margin-top: 1rem;
-        padding: 0.5rem 1rem;
-        background-color: #007bff;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-        bottom: 30px;
-        margin: 10px 20px;
-        z-index: 8;
-      }      
-      button:hover {
-        background-color: #0056b3;
-      }
-      
-      button:disabled {
-        background-color: #ccc;
-        cursor: not-allowed;
-      }
+
+  & button {
+    margin-top: 1rem;
+    padding: 0.5rem 1rem;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    bottom: 30px;
+    margin: 10px 20px;
+    z-index: 8;
+
+    &:hover {
+      background-color: #0056b3;
+    }
+
+    &:disabled {
+      background-color: #ccc;
+      cursor: not-allowed;
+    }
   }
-  
-  
-  
-  
-  
+}
