--- a/app/globals.scss
+++ b/app/globals.scss
@@ -5,10 +5,10 @@
   margin: 0;
 }
 
-html,body {
+html,
+body {
   max-width: 100vw;
-  height: 100%;
-  overflow: hidden;
+  min-height: 100%;
 }
 
 body {
@@ -16,6 +16,7 @@ body {
   color: colors.$primary;
   display: flex;
   flex-direction: column;
+  margin: auto 20px;
 }
 
 ul {
@@ -32,7 +33,7 @@ a {
 }
 main {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   height: 100%;
 }
