--- a/app/components/FlipBook/FlipBook.css
+++ b/app/components/FlipBook/FlipBook.css
@@ -1,32 +1,30 @@
 .book {
-  height: 800px;
-  max-width: 100%;
-  max-height: 100%;
-  min-width: 600px;
+  width: 90%;
+  height: 400px;
+  max-width: 600px;
   display: flex;
   align-items: center;
   justify-content: center;
   perspective: 1000px;
   position: relative;
-  flex: 1;
   margin: 10px;
-  background-color: #8B4513;
+  background-color: #8b4513;
 }
 .book__page {
   height: 98%;
   width: 98%;
-  padding: 50px;
   display: flex;
   justify-content: center;
   position: absolute;
-  padding: 10px 5px;
   background-color: #f5f5db;
   backface-visibility: hidden;
 }
 .book__page__content {
   padding: 20px;
   font-size: 24px;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 99%;
   height: 100%;
   border-radius: 5px;
@@ -37,6 +35,9 @@
 }
 .book__page--hidden {
   display: none;
+}
+.book__page__navigation {
+  z-index: 10;
 }
 .book button {
   margin-top: 1rem;
@@ -49,7 +50,6 @@
   transition: background-color 0.3s ease;
   bottom: 30px;
   margin: 10px 20px;
-  z-index: 8;
 }
 .book button:hover {
   background-color: #0056b3;
