--- a/app/components/FlipBook/FlipBook.scss
+++ b/app/components/FlipBook/FlipBook.scss
@@ -1,43 +1,42 @@
 .book {
-  height: 800px;
-  max-width: 100%;
-  max-height: 100%;
-  min-width: 600px;
+  width: 90%;
+  height: 400px;
+  max-width: 600px;
   display: flex;
   align-items: center;
   justify-content: center;
   perspective: 1000px;
   position: relative;
-  flex: 1;
   margin: 10px;
-  background-color:  #8B4513;
+  background-color: #8b4513;
   &__page {
     height: 98%;
     width: 98%;
-    padding: 50px;
     display: flex;
     justify-content: center;
     position: absolute;
-    padding: 10px 5px;
-    background-color:  #f5f5db;
+    background-color: #f5f5db;
     backface-visibility: hidden;
-   
     &__content {
       padding: 20px;
       font-size: 24px;
-      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       width: 99%;
       height: 100%;
       border-radius: 5px;
       height: 90%;
       background-color: white;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-      background-color:  #f5f5dc;
+      background-color: #f5f5dc;
     }
     &--hidden {
       display: none;
     }
-    
+    &__navigation {
+      z-index: 10;
+    }
   }
 
   & button {
@@ -51,7 +50,6 @@
     transition: background-color 0.3s ease;
     bottom: 30px;
     margin: 10px 20px;
-    z-index: 8;
 
     &:hover {
       background-color: #0056b3;
