--- a/app/components/Header/Header.css
+++ b/app/components/Header/Header.css
@@ -1,6 +1,7 @@
 header {
   padding: 20px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-between;
 }
@@ -10,19 +11,20 @@ header h1 {
   background-color: #ffbe0b;
   padding: 10px 20px;
   border-radius: 5px;
-  margin-left: 40px;
+  text-align: center;
 }
 header .navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-right: 50px;
+  gap: 5px;
+  margin: 15px 0;
 }
 header .navbar a {
+  text-align: center;
   display: block;
-  margin: 0 20px;
+  margin: 0 5px;
   transition: transform 0.2s, color 0.2s;
-  width: 50px;
   padding: 10px 10px;
 }
 header .navbar a:hover {
