--- a/app/components/Header/Header.scss
+++ b/app/components/Header/Header.scss
@@ -1,32 +1,36 @@
 @use '../../colors';
 header {
-    padding: 20px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  & h1 {
+    font-size: 44px;
+    margin: 0;
+    background-color: colors.$secondary;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-align: center;
+  }
+  & .navbar {
     display: flex;
     align-items: center;
-    justify-content: space-between;   
-    & h1 {
-        font-size: 44px;
-        margin: 0;
-        background-color: colors.$secondary;
-        padding: 10px 20px;
-        border-radius: 5px;
-        margin-left: 40px;
-        }
-    & .navbar {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin-right: 50px;
-        & a {
-            display: block;
-             margin: 0 20px;
-             transition: transform 0.2s, color 0.2s;
-             width: 50px;
-             padding: 10px 10px;
-            }
-        & a:hover {
-            color: colors.$tertiary;
-            transform: scale(1.2); 
-          }
+    justify-content: space-between;
+    gap: 5px;
+    margin: 15px 0;
+    & a {
+      text-align: center;
+      display: block;
+      margin: 0 5px;
+      transition:
+        transform 0.2s,
+        color 0.2s;
+      padding: 10px 10px;
     }
+    & a:hover {
+      color: colors.$tertiary;
+      transform: scale(1.2);
+    }
+  }
 }
