--- a/app/globals.css
+++ b/app/globals.css
@@ -4,10 +4,10 @@
   margin: 0;
 }
 
-html, body {
+html,
+body {
   max-width: 100vw;
-  height: 100%;
-  overflow: hidden;
+  min-height: 100%;
 }
 
 body {
@@ -15,6 +15,7 @@ body {
   color: #fb5607;
   display: flex;
   flex-direction: column;
+  margin: auto 20px;
 }
 
 ul {
@@ -32,7 +33,7 @@ a {
 
 main {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   height: 100%;
 }
