Mise en place du useContext selectedBook et currentPage Correction valeur affiché dans le select Création des premières pages contenant le lecteur et une bibiliothèque

--- a/app/components/BookNav/BookNav.css
+++ b/app/components/BookNav/BookNav.css
@@ -1,15 +1,16 @@
 .booknav__desc {
   text-align: center;
 }
+.booknav__cover {
+  display: block;
+  margin: 0 auto;
+}
 .booknav__selection {
   margin: 20px;
 }
 .booknav__selection h3 {
   margin: 8px;
 }
-.booknav__selection__item {
-  padding: 4px 5px;
-  margin: 5px 5px;
-  cursor: pointer;
-  background-color: black;
+.booknav__selection__select {
+  z-index: 20;
 }/*# sourceMappingURL=BookNav.css.map */
