--- a/app/globals.scss
+++ b/app/globals.scss
@@ -31,7 +31,8 @@ a {
   transition: color 0.3s;
   cursor: pointer;
 }
-main {
+main,
+.reader {
   display: flex;
   flex-direction: column;
   align-items: center;
