--- a/app/components/FlipBook/FlipBook.css
+++ b/app/components/FlipBook/FlipBook.css
@@ -33,6 +33,10 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   background-color: #f5f5dc;
 }
+.book__page__content img {
+  width: 100%;
+  height: 100%;
+}
 .book__page--hidden {
   display: none;
 }
