--- a/app/components/FlipBook/FlipBook.scss
+++ b/app/components/FlipBook/FlipBook.scss
@@ -30,6 +30,10 @@
       background-color: white;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
       background-color: #f5f5dc;
+      & img {
+        width: 100%;
+        height: 100%;
+      }
     }
     &--hidden {
       display: none;
