--- a/frontend/app/components/FlipBook/FlipBook.css
+++ b/frontend/app/components/FlipBook/FlipBook.css
@@ -1,7 +1,13 @@
-.book {
-  width: 90%;
-  height: 400px;
-  max-width: 600px;
+.flipbook {
+  width: 70%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.flipbook .book {
+  height: 500px;
+  width: 400px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10,7 +16,7 @@
   margin: 10px;
   background-color: #8b4513;
 }
-.book__page {
+.flipbook .book__page {
   height: 98%;
   width: 98%;
   display: flex;
@@ -19,27 +25,31 @@
   background-color: #f5f5db;
   backface-visibility: hidden;
 }
-.book__page__content {
+.flipbook .book__page__content {
   padding: 20px;
   font-size: 24px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 99%;
+  width: 100%;
   height: 100%;
   border-radius: 5px;
-  height: 90%;
-  background-color: white;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  background-color: #f5f5dc;
+  background-image: url("../../../public/assets/bookbackground.webp");
+  background-size: cover;
+  background-position: center;
 }
-.book__page__content img {
+.flipbook .book__page__content p {
+  font-size: 24px;
+  text-align: justify;
+}
+.flipbook .book__page__content img {
   width: 100%;
   height: 100%;
 }
-.book__page--hidden {
+.flipbook .book__page--hidden {
   display: none;
 }
-.book__page__navigation {
+.flipbook .book__page__navigation {
   z-index: 10;
 }/*# sourceMappingURL=FlipBook.css.map */
