--- a/frontend/app/components/FlipBook/FlipBook.scss
+++ b/frontend/app/components/FlipBook/FlipBook.scss
@@ -1,45 +1,55 @@
-.book {
-  width: 90%;
-  height: 400px;
-  max-width: 600px;
+.flipbook {
+  width: 70%;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  perspective: 1000px;
-  position: relative;
-  margin: 10px;
-  background-color: #8b4513;
-  &__page {
-    height: 98%;
-    width: 98%;
+  & .book {
+    height: 500px;
+    width: 400px;
     display: flex;
+    align-items: center;
     justify-content: center;
-    position: absolute;
-    background-color: #f5f5db;
-    backface-visibility: hidden;
-    &__content {
-      padding: 20px;
-      font-size: 24px;
+    perspective: 1000px;
+    position: relative;
+    margin: 10px;
+    background-color: #8b4513;
+    &__page {
+      height: 98%;
+      width: 98%;
       display: flex;
       justify-content: center;
-      align-items: center;
-      width: 99%;
-      height: 100%;
-      border-radius: 5px;
-      height: 90%;
-      background-color: white;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-      background-color: #f5f5dc;
-      & img {
+      position: absolute;
+      background-color: #f5f5db;
+      backface-visibility: hidden;
+      &__content {
+        padding: 20px;
+        font-size: 24px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 100%;
         height: 100%;
+        border-radius: 5px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        background-image: url('../../../public/assets/bookbackground.webp');
+        background-size: cover;
+        background-position: center;
+        & p {
+          font-size: 24px;
+          text-align: justify;
+        }
+        & img {
+          width: 100%;
+          height: 100%;
+        }
       }
-    }
-    &--hidden {
-      display: none;
-    }
-    &__navigation {
-      z-index: 10;
+      &--hidden {
+        display: none;
+      }
+      &__navigation {
+        z-index: 10;
+      }
     }
   }
 }
