--- a/frontend/app/components/HomeLinks/HomeLinks.scss
+++ b/frontend/app/components/HomeLinks/HomeLinks.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   & a {
+    width: 80%;
     margin: 20px;
     padding: 20px;
     color: colors.$tertiary;
