--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -34,9 +34,9 @@ a {
 main,
 .reader {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
   height: 100%;
+  justify-content: center;
 }
 
 @media (prefers-color-scheme: dark) {
