--- a/frontend/app/components/BibliList/BibliList.scss
+++ b/frontend/app/components/BibliList/BibliList.scss
@@ -3,6 +3,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  &__flex {
+    display: flex;
+    gap: 20px;
+  }
   & .biblilist {
     display: flex;
     flex-wrap: wrap;
@@ -20,6 +24,8 @@
         margin: 20px 10px;
         & h3 {
           width: 150px;
+          min-height: 50px;
+          margin-bottom: 10px;
           text-align: center;
         }
       }
