MAJ design, bouton login

--- a/frontend/app/components/BibliList/BibliList.css
+++ b/frontend/app/components/BibliList/BibliList.css
@@ -10,7 +10,6 @@
 .bibli .biblilist {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
 }
 .bibli .biblilist__book {
   flex-basis: 20%;
@@ -18,6 +17,7 @@
   flex-direction: column;
   align-items: center;
   margin: 20px 10px;
+  justify-content: flex-end;
 }
 .bibli .biblilist__book__link {
   display: flex;
@@ -27,8 +27,7 @@
 }
 .bibli .biblilist__book__link h3 {
   width: 150px;
-  min-height: 50px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   text-align: center;
 }
 .bibli .biblilist__book__button {
@@ -36,6 +35,10 @@
   border-radius: 25px;
   font-size: 14px;
   border: 3px solid red;
-  color: #ffbe0b;
-  background-color: #8338ec;
+  color: #ddf0ff;
+  background-color: #4c2556;
+}
+.bibli .biblilist__book__link:hover {
+  transition: transform ease-in 0.4s;
+  transform: scale(1.2);
 }/*# sourceMappingURL=BibliList.css.map */
