--- a/frontend/app/components/HomeLinks/HomeLinks.scss
+++ b/frontend/app/components/HomeLinks/HomeLinks.scss
@@ -4,12 +4,18 @@
   flex-direction: column;
   align-items: center;
   & a {
-    width: 80%;
+    width: 70%;
+    min-height: 100px;
     margin: 20px;
     padding: 20px;
-    color: colors.$tertiary;
     background-color: colors.$secondary;
     border-radius: 5px;
     text-align: center;
+    transition: ease-out 0.3s;
+  }
+  & a:hover {
+    background-color: colors.$primary;
+    color: colors.$tertiary;
+    transform: scale(1.1);
   }
 }
