--- a/frontend/app/globals.scss
+++ b/frontend/app/globals.scss
@@ -12,13 +12,15 @@ body {
 }
 
 body {
-  background-color: colors.$background; /* Adjust the background color */
+  background-color: colors.$tertiary; /* Adjust the background color */
   color: colors.$primary;
   display: flex;
   flex-direction: column;
   margin: auto 20px;
 }
-
+button {
+  cursor: pointer;
+}
 ul {
   list-style-type: none;
 }
@@ -37,6 +39,7 @@ main,
   flex-direction: row;
   height: 100%;
   justify-content: center;
+  margin-bottom: 50px;
 }
 @media (prefers-color-scheme: dark) {
   html {
