--- a/frontend/app/colors.scss
+++ b/frontend/app/colors.scss
@@ -1,6 +1,6 @@
 $background: #ffffff;
-$primary: #fb5607;
-$secondary: #ffbe0b;
-$tertiary: #8338ec;
-$quaternary: #3a86ff;
-$quinary: #ff006e;
+$primary: #4c2556;
+$secondary: rgba(#bf6e9b, 0.6);
+$tertiary: #ddf0ff;
+$quaternary: #ffe74c;
+$quinary: #6bf178;
