--- a/frontend/app/components/CreateBook/CreateBook.css
+++ b/frontend/app/components/CreateBook/CreateBook.css
@@ -12,6 +12,8 @@
   padding: 10px 20px;
   margin: 20px 10px;
   border-radius: 20px;
-  border: solid 1px #8338ec;
-  background-color: #ffbe0b;
+  color: #4c2556;
+  font-size: 16px;
+  border: solid 2px #4c2556;
+  background-color: rgba(191, 110, 155, 0.6);
 }/*# sourceMappingURL=CreateBook.css.map */
