--- a/frontend/app/components/CreateBook/CreateBook.scss
+++ b/frontend/app/components/CreateBook/CreateBook.scss
@@ -12,7 +12,9 @@
     padding: 10px 20px;
     margin: 20px 10px;
     border-radius: 20px;
-    border: solid 1px colors.$tertiary;
+    color: colors.$primary;
+    font-size: 16px;
+    border: solid 2px colors.$primary;
     background-color: colors.$secondary;
   }
 }
