--- a/frontend/app/components/FlipBook/FlipBook.css
+++ b/frontend/app/components/FlipBook/FlipBook.css
@@ -14,7 +14,8 @@
   perspective: 1000px;
   position: relative;
   margin: 10px;
-  background-color: #8b4513;
+  background-color: #4c2556;
+  box-shadow: 0 2px 10px rgba(76, 37, 86, 0.8);
 }
 .flipbook .book__page {
   height: 98%;
@@ -34,7 +35,6 @@
   width: 100%;
   height: 100%;
   border-radius: 5px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   background-image: url("../../../public/assets/bookbackground.webp");
   background-size: cover;
   background-position: center;
