--- a/frontend/app/components/FlipButton/FlipButton.css
+++ b/frontend/app/components/FlipButton/FlipButton.css
@@ -6,17 +6,19 @@
 .flipbuttons button {
   margin-top: 1rem;
   padding: 0.5rem 1rem;
-  background-color: #007bff;
+  background-color: #4c2556;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: transform 0.2s ease-out, color 0.2s ease-out, background-color 0.2s ease-out;
   bottom: 30px;
   margin: 10px 20px;
 }
 .flipbuttons button:hover {
-  background-color: #0056b3;
+  transform: scale(1.1);
+  color: #4c2556;
+  background-color: rgba(191, 110, 155, 0.6);
 }
 .flipbuttons button:disabled {
   background-color: #ccc;
