--- a/frontend/app/components/Header/Header.css
+++ b/frontend/app/components/Header/Header.css
@@ -1,33 +1,57 @@
 header {
   padding: 20px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: space-between;
 }
-header h1 {
-  font-size: 44px;
-  margin: 0;
-  background-color: #ffbe0b;
+header .header__name {
+  margin-left: 20px;
+  display: flex;
+  align-items: center;
+  background-color: rgba(191, 110, 155, 0.6);
   padding: 10px 20px;
-  border-radius: 5px;
+  border-radius: 20px;
+}
+header .header__name h1 {
+  font-size: 34px;
+  margin: 0;
   text-align: center;
+}
+header .header__name__logo {
+  border-radius: 25%;
+}
+header .header__name img {
+  margin-right: 10px;
 }
 header .navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 5px;
-  margin: 15px 0;
+  gap: 20px;
+  margin: 15px 20px;
+}
+header .navbar .underline {
+  display: inline-block;
+  padding-bottom: 2px;
+  background-image: linear-gradient(rgba(191, 110, 155, 0.6) 0 0);
+  background-position: 0 100%;
+  background-size: 0% 2px;
+  background-repeat: no-repeat;
+  transition: background-image 0.4s, background-size 0.4s, background-position 0s 0.4s;
+}
+header .navbar .underline:hover {
+  transform: background-image 0.4s ease-out;
+  background-image: linear-gradient(#4c2556 0 0);
+  background-position: 100% 100%;
+  background-size: 100% 2px;
 }
 header .navbar a {
   text-align: center;
   display: block;
   margin: 0 5px;
   transition: transform 0.2s, color 0.2s;
-  padding: 10px 10px;
+  padding: 15px 15px;
 }
 header .navbar a:hover {
-  color: #8338ec;
-  transform: scale(1.2);
+  transform: scale(1.3);
 }/*# sourceMappingURL=Header.css.map */
