--- a/frontend/app/components/Header/Header.scss
+++ b/frontend/app/components/Header/Header.scss
@@ -2,23 +2,53 @@
 header {
   padding: 20px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  & h1 {
-    font-size: 44px;
-    margin: 0;
+  & .header__name {
+    margin-left: 20px;
+    display: flex;
+    align-items: center;
     background-color: colors.$secondary;
     padding: 10px 20px;
-    border-radius: 5px;
-    text-align: center;
+    border-radius: 20px;
+    & h1 {
+      font-size: 34px;
+      margin: 0;
+      text-align: center;
+    }
+    &__logo {
+      border-radius: 25%;
+    }
+    & img {
+      //  background-color: colors.$primary;
+      margin-right: 10px;
+    }
   }
   & .navbar {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 5px;
-    margin: 15px 0;
+    gap: 20px;
+    margin: 15px 20px;
+    & .underline {
+      display: inline-block;
+      padding-bottom: 2px;
+      background-image: linear-gradient(colors.$secondary 0 0);
+      background-position: 0 100%;
+      background-size: 0% 2px;
+      background-repeat: no-repeat;
+      transition:
+        background-image 0.4s,
+        background-size 0.4s,
+        background-position 0s 0.4s;
+    }
+
+    & .underline:hover {
+      transform: background-image 0.4s ease-out;
+      background-image: linear-gradient(colors.$primary 0 0);
+      background-position: 100% 100%;
+      background-size: 100% 2px;
+    }
     & a {
       text-align: center;
       display: block;
@@ -26,11 +56,11 @@ header {
       transition:
         transform 0.2s,
         color 0.2s;
-      padding: 10px 10px;
+      padding: 15px 15px;
     }
     & a:hover {
-      color: colors.$tertiary;
-      transform: scale(1.2);
+      // color: colors.$secondary;
+      transform: scale(1.3);
     }
   }
 }
