--- a/frontend/app/components/LoginForm/LoginForm.css
+++ b/frontend/app/components/LoginForm/LoginForm.css
@@ -7,13 +7,13 @@
   margin: 10px;
   padding: 10px 20px;
   text-align: center;
-  border: 1px solid #ffbe0b;
+  border: 1px solid rgba(191, 110, 155, 0.6);
 }
 .loginform__buttons button {
   margin: 10px;
   padding: 10px 20px;
-  color: #fb5607;
-  background-color: #ffbe0b;
+  color: #4c2556;
+  background-color: rgba(191, 110, 155, 0.6);
   border: none;
   border-radius: 5px;
   font-weight: 700;
