--- a/frontend/app/components/WelcomeAnimation/WelcomeAnimation.css
+++ b/frontend/app/components/WelcomeAnimation/WelcomeAnimation.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .animation {
   display: flex;
   align-items: center;
@@ -8,7 +7,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: white; /* Couleur de fond, ajustez selon vos préférences */
+  background-color: #ddf0ff;
   animation: fadeInAndOut 2s ease-in-out forwards;
   z-index: 100;
 }
