--- a/frontend/app/components/CreateBook/CreateBook.css
+++ b/frontend/app/components/CreateBook/CreateBook.css
@@ -3,7 +3,7 @@
   margin: 0 auto;
 }
 .create__book h2 {
-  margin: 20px 10px;
+  margin: 50px 10px 20px;
 }
 .create__book form div {
   margin: 20px 20px;
