--- a/frontend/app/globals.scss
+++ b/frontend/app/globals.scss
@@ -41,6 +41,9 @@ main,
   justify-content: center;
   margin-bottom: 50px;
 }
+#setpageid * {
+  cursor: pointer;
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
