--- a/frontend/app/components/CreateBook/CreateBook.scss
+++ b/frontend/app/components/CreateBook/CreateBook.scss
@@ -3,7 +3,7 @@
   width: 500px;
   margin: 0 auto;
   & h2 {
-    margin: 20px 10px;
+    margin: 50px 10px 20px;
   }
   & form div {
     margin: 20px 20px;
