--- a/app/components/Header/Header.scss
+++ b/app/components/Header/Header.scss
@@ -58,9 +58,31 @@ header {
         color 0.2s;
       padding: 15px 15px;
     }
-    & a:hover {
+    /* & a:hover {
       // color: colors.$secondary;
       transform: scale(1.3);
+    } */
+  }
+}
+@media screen and (max-width: 768px) {
+  header {
+    flex-direction: column;
+    & .header__name {
+      margin-left: 0;
+    }
+    & .navbar {
+      flex-wrap: wrap;
+      margin: 15px 0;
+      gap: 0;
+      & li {
+        flex-basis: 40%;
+        text-align: center;
+        width: 100%;
+        min-width: 50%;
+        & a {
+          margin: 0;
+        }
+      }
     }
   }
 }
