--- a/app/components/LoginForm/LoginForm.css
+++ b/app/components/LoginForm/LoginForm.css
@@ -9,6 +9,11 @@
   text-align: center;
   border: 1px solid rgba(191, 110, 155, 0.6);
 }
+.loginform__error {
+  color: #ff3632;
+  transition: color 0.2s ease-out;
+  margin-bottom: 25px;
+}
 .loginform__buttons button {
   margin: 10px;
   padding: 10px 20px;
