MAJ input image + Responsive

--- a/app/components/BookNav/BookNav.css
+++ b/app/components/BookNav/BookNav.css
@@ -24,4 +24,11 @@
 .booknav__selection #setbookid * {
   z-index: 20;
   cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  .booknav {
+    max-width: 100%;
+    margin-left: 0px;
+  }
 }/*# sourceMappingURL=BookNav.css.map */
