--- a/app/globals.css
+++ b/app/globals.css
@@ -41,7 +41,6 @@ main,
   flex-direction: row;
   height: 100%;
   justify-content: center;
-  margin-bottom: 50px;
 }
 
 #setpageid * {
@@ -51,5 +50,11 @@ main,
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
+  }
+}
+@media screen and (max-width: 768px) {
+  main,
+  .reader {
+    flex-direction: column;
   }
 }/*# sourceMappingURL=globals.css.map */
