--- a/app/components/CreateBook/CreateBook.css
+++ b/app/components/CreateBook/CreateBook.css
@@ -1,11 +1,20 @@
 .create__book {
-  width: 500px;
   margin: 0 auto;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+  font-size: 20px;
 }
-.create__book .create__book__image {
+.create__book label {
+  text-align: center;
+  width: 200px;
+  padding: 4px;
+  cursor: pointer;
+}
+.create__book label:hover {
+  box-shadow: none;
+}
+.create__book__image {
   padding: 10px;
   background-color: rgba(191, 110, 155, 0.6);
   color: #4c2556;
@@ -13,23 +22,46 @@
   border-radius: 5px;
   cursor: pointer;
   margin: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.create__book__image__input {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 .create__book__image:hover {
   box-shadow: 0 2px 10px rgba(76, 37, 86, 0.8);
   transition: 0.2s;
 }
+.create__book__image__preview {
+  margin: 10px 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.create__book__image__placeholder {
+  font-size: 80px;
+  padding: 20px;
+  margin: 10px 0;
+  height: 150px;
+  width: 100px;
+}
 .create__book__text {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 20px 10px;
-  padding: 10px 10px 0 10px;
-  width: 400px;
-  height: 50px;
+  margin: 10px 10px 20px;
+  padding: 10px;
+  width: 300px;
+  height: 150px;
   background-color: rgba(191, 110, 155, 0.6);
   color: #4c2556;
   border: 1px solid #4c2556;
   border-radius: 5px;
+  font-size: 20px;
 }
 .create__book__text:hover {
   box-shadow: 0 2px 10px rgba(76, 37, 86, 0.8);
@@ -37,9 +69,11 @@
 }
 .create__book__text::-moz-placeholder {
   color: #4c2556;
+  font-size: 20px;
 }
 .create__book__text::placeholder {
   color: #4c2556;
+  font-size: 20px;
 }
 .create__book__text:focus {
   box-shadow: 0 2px 10px rgba(76, 37, 86, 0.8);
@@ -49,11 +83,37 @@
   padding: 10px 20px;
   border-radius: 20px;
   color: #4c2556;
-  font-size: 16px;
+  font-size: 20px;
   border: solid 2px #4c2556;
   background-color: rgba(191, 110, 155, 0.6);
 }
 .create__book button:hover {
   box-shadow: 0 2px 10px rgba(76, 37, 86, 0.8);
   transition: 0.2s;
+}
+.create__book__right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px 10px;
+}
+
+@media screen and (max-width: 780px) {
+  .create__book {
+    width: 280px;
+    flex-direction: column;
+  }
+  .create__book__image__input {
+    flex-direction: column;
+  }
+  .create__book__text {
+    width: 280px;
+    font-size: 16px;
+  }
+  .create__book__text::-moz-placeholder {
+    font-size: 16px;
+  }
+  .create__book__text::placeholder {
+    font-size: 16px;
+  }
 }/*# sourceMappingURL=CreateBook.css.map */
