--- a/app/components/CreateBook/CreateBook.scss
+++ b/app/components/CreateBook/CreateBook.scss
@@ -1,11 +1,20 @@
 @use '../../colors';
 .create__book {
-  width: 500px;
   margin: 0 auto;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  .create__book__image {
+  font-size: 20px;
+  & label {
+    text-align: center;
+    width: 200px;
+    padding: 4px;
+    cursor: pointer;
+    &:hover {
+      box-shadow: none;
+    }
+  }
+  &__image {
     padding: 10px;
     background-color: colors.$secondary;
     color: colors.$primary;
@@ -13,45 +22,92 @@
     border-radius: 5px;
     cursor: pointer;
     margin: 10px;
-  }
-  &__image:hover {
-    box-shadow: 0 2px 10px rgba(colors.$primary, 0.8);
-    transition: 0.2s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    &__input {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+    }
+    &:hover {
+      box-shadow: 0 2px 10px rgba(colors.$primary, 0.8);
+      transition: 0.2s;
+    }
+    &__preview {
+      margin: 10px 0;
+      object-fit: cover;
+    }
+    &__placeholder {
+      font-size: 80px;
+      padding: 20px;
+      margin: 10px 0;
+      height: 150px;
+      width: 100px;
+    }
   }
   &__text {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 20px 10px;
-    padding: 10px 10px 0 10px;
-    width: 400px;
-    height: 50px;
+    margin: 10px 10px 20px;
+    padding: 10px;
+    width: 300px;
+    height: 150px;
     background-color: colors.$secondary;
     color: colors.$primary;
     border: 1px solid colors.$primary;
     border-radius: 5px;
-  }
-  &__text:hover {
-    box-shadow: 0 2px 10px rgba(colors.$primary, 0.8);
-    transition: 0.2s;
-  }
-  &__text::placeholder {
-    color: colors.$primary;
-  }
-  &__text:focus {
-    box-shadow: 0 2px 10px rgba(colors.$primary, 0.8);
-    outline: none;
+    font-size: 20px;
+    &:hover {
+      box-shadow: 0 2px 10px rgba(colors.$primary, 0.8);
+      transition: 0.2s;
+    }
+    &::placeholder {
+      color: colors.$primary;
+      font-size: 20px;
+    }
+    &:focus {
+      box-shadow: 0 2px 10px rgba(colors.$primary, 0.8);
+      outline: none;
+    }
   }
   & button {
     padding: 10px 20px;
     border-radius: 20px;
     color: colors.$primary;
-    font-size: 16px;
+    font-size: 20px;
     border: solid 2px colors.$primary;
     background-color: colors.$secondary;
   }
   & button:hover {
     box-shadow: 0 2px 10px rgba(colors.$primary, 0.8);
     transition: 0.2s;
+  }
+  &__right {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px 10px;
+  }
+}
+@media screen and (max-width: 780px) {
+  .create__book {
+    width: 280px;
+    flex-direction: column;
+    &__image {
+      &__input {
+        flex-direction: column;
+      }
+    }
+    &__text {
+      width: 280px;
+      font-size: 16px;
+      &::placeholder {
+        font-size: 16px;
+      }
+    }
   }
 }
