--- a/app/components/FlipBook/FlipBook.css
+++ b/app/components/FlipBook/FlipBook.css
@@ -1,3 +1,10 @@
+.notselectedbook {
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  margin: 0 30px;
+}
+
 .flipbook {
   width: 70%;
   display: flex;
@@ -28,7 +35,6 @@
 }
 .flipbook .book__page__content {
   padding: 20px;
-  font-size: 24px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -52,4 +58,18 @@
 }
 .flipbook .book__page__navigation {
   z-index: 10;
+}
+
+@media screen and (max-width: 768px) {
+  .flipbook {
+    width: 100%;
+    flex-direction: column;
+  }
+  .flipbook .book {
+    height: 400px;
+    width: 300px;
+  }
+  .flipbook .book__page__content p {
+    font-size: 16px;
+  }
 }/*# sourceMappingURL=FlipBook.css.map */
