--- a/app/components/FlipNav/FlipNav.css
+++ b/app/components/FlipNav/FlipNav.css
@@ -3,4 +3,10 @@
   flex-direction: column;
   align-items: center;
   width: 200px;
+}
+
+@media screen and (max-width: 768px) {
+  .book__page__navigation {
+    margin: 30px 0 0;
+  }
 }/*# sourceMappingURL=FlipNav.css.map */
