--- a/app/components/FlipNav/FlipNav.scss
+++ b/app/components/FlipNav/FlipNav.scss
@@ -4,3 +4,9 @@
   align-items: center;
   width: 200px;
 }
+
+@media screen and (max-width: 768px) {
+  .book__page__navigation {
+    margin: 30px 0 0;
+  }
+}
