--- a/app/components/HomeLinks/HomeLinks.scss
+++ b/app/components/HomeLinks/HomeLinks.scss
@@ -3,19 +3,28 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  & a {
-    width: 70%;
-    min-height: 100px;
-    margin: 20px;
-    padding: 20px;
-    background-color: colors.$secondary;
-    border-radius: 5px;
-    text-align: center;
-    transition: ease-out 0.3s;
-  }
-  & a:hover {
-    background-color: colors.$primary;
-    color: colors.$tertiary;
-    transform: scale(1.1);
+  & .homelink {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 50px;
+    &__img {
+      padding: 10px 0 10px 0;
+    }
+    &__desc {
+      width: 500px;
+      min-height: 100px;
+      margin: 20px 0 20px 20px;
+      padding: 20px;
+      background-color: colors.$secondary;
+      border-radius: 5px;
+      text-align: center;
+      font-size: 14px;
+      transition: ease-out 0.3s;
+    }
+    &__desc:hover {
+      background-color: colors.$primary;
+      color: colors.$tertiary;
+    }
   }
 }
