main margin-bottom

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -39,6 +39,7 @@ main,
   flex-direction: row;
   height: 100%;
   justify-content: center;
+  margin-bottom: 70px;
 }
 #setpageid * {
   cursor: pointer;
