--- a/app/components/CreateBook/CreateBook.scss
+++ b/app/components/CreateBook/CreateBook.scss
@@ -81,6 +81,7 @@
     font-size: 20px;
     border: solid 2px colors.$primary;
     background-color: colors.$secondary;
+    border-bottom: 10px;
   }
   & button:hover {
     box-shadow: 0 2px 10px rgba(colors.$primary, 0.8);
