--- a/app/components/BibliList/BibliList.scss
+++ b/app/components/BibliList/BibliList.scss
@@ -29,7 +29,15 @@
           text-align: center;
         }
       }
-      &__button {
+      &__nocover {
+        width: 100px;
+        height: 150px;
+        display: flex;
+        align-items: center;
+        background-color: whitesmoke;
+        text-align: center;
+      }
+      &__delete {
         padding: 10px 20px;
         border-radius: 25px;
         font-size: 14px;
