--- a/app/components/BookNav/BookNav.scss
+++ b/app/components/BookNav/BookNav.scss
@@ -14,6 +14,15 @@
       margin: 20px auto;
     }
   }
+  &__nocover {
+    margin: 20px auto;
+    width: 150px;
+    height: 200px;
+    display: flex;
+    align-items: center;
+    background-color: whitesmoke;
+    text-align: center;
+  }
   &__selection {
     margin: 20px;
     & h3 {
