--- a/app/components/CreateBook/CreateBook.css
+++ b/app/components/CreateBook/CreateBook.css
@@ -86,7 +86,7 @@
   font-size: 20px;
   border: solid 2px #4c2556;
   background-color: rgba(191, 110, 155, 0.6);
-  border-bottom: 10px;
+  margin-bottom: 10px;
 }
 .create__book button:hover {
   box-shadow: 0 2px 10px rgba(76, 37, 86, 0.8);
