--- a/app/components/FlipBook/FlipBook.css
+++ b/app/components/FlipBook/FlipBook.css
@@ -52,6 +52,8 @@
 .flipbook .book__page__content img {
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .flipbook .book__page--hidden {
   display: none;
@@ -66,8 +68,8 @@
     flex-direction: column;
   }
   .flipbook .book {
-    height: 400px;
-    width: 300px;
+    height: 380px;
+    width: 265px;
   }
   .flipbook .book__page__content p {
     font-size: 16px;
