--- a/app/components/FlipBook/FlipBook.scss
+++ b/app/components/FlipBook/FlipBook.scss
@@ -48,6 +48,7 @@
         & img {
           width: 100%;
           height: 100%;
+          object-fit: cover;
         }
       }
       &--hidden {
@@ -65,8 +66,8 @@
     width: 100%;
     flex-direction: column;
     & .book {
-      height: 400px;
-      width: 300px;
+      height: 380px;
+      width: 265px;
       &__page {
         &__content p {
           font-size: 16px;
